Fix table font size being too small (#236)

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -77,7 +77,7 @@ button.button-secondary-outline {
 
 
 @media (min-width: $medium-screen) {
-  .table {
+  .table-container {
     font-size: $base-font-size;
     td, th {
       padding: 1.5rem;
